@@ -1,1 +1,1 @@
-/usr/pkg/share/automake-1.10/COPYING
+/usr/pkg/share/automake-1.11/COPYING
